fix stat alignment

--- a/styles/_reports.sass
+++ b/styles/_reports.sass
@@ -192,16 +192,21 @@
         svg
           margin-right: 12px
     .stats
+      height: 100%
+      align-items: stretch
       &.three
         justify-content: space-between
       &.two
         justify-content: space-around
     .stat
       max-width: 200px
+      height: 100%
       h2
         font-size: 56px
         margin-bottom: 4px
         line-height: 1
+        display: flex
+        align-items: flex-end
       .qualifier
         display: inline-block
         font-size: 20px
